--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointmentPurpose/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointmentPurpose/CreateEdit.cshtml
@@ -31,9 +31,9 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.HospitalPatientAppointmentPurpose, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.HospitalPatientAppointmentPurpose, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.HospitalPatientAppointmentPurpose)
+                                        @Html.LabelFor(x => x.AppointmentPurpose, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.AppointmentPurpose, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.AppointmentPurpose)
                                     </div>
                                 </div>
                                 <div class="col-lg-2">
