--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointmentPurpose/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointmentPurpose/_List.cshtml
@@ -18,12 +18,12 @@
                     foreach (var item in Model?.HospitalPatientAppointmentPurposeList)
                     {
                         <tr>
-                            <td>@item.HospitalPatientAppointmentPurpose</td>
+                            <td>@item.AppointmentPurpose</td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?HospitalPatientAppointmentPurposeId=@item.HospitalPatientAppointmentPurposeId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Edit?hospitalPatientAppointmentPurposeId=@item.HospitalPatientAppointmentPurposeId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?hospitalPatientAppointmentPurposeIds=@item.HospitalPatientAppointmentPurposeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
