--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = Model.HospitalPatientAppointmentId > 0 ? "Update Hospital Patient Appointment" : "Add Hospital Patient Appointment";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()", IsDisabled = Model.HospitalPatientAppointmentId > 0 };
-
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalPatientAppointment.GetDoctorsByCentreCodeAndSpecialization()", IsDisabled = Model.HospitalPatientAppointmentId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -79,7 +78,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.AppointmentDate, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.AppointmentDate, new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.AppointmentDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.AppointmentDate)
                                     </div>
                                 </div>
@@ -157,8 +156,21 @@
             $("#AppointmentDate").datepicker({
                 changeMonth: true,
                 changeYear: true,
-                format: "dd-mm-yyyy",
-                language: "tr"
+                yearRange: "-100:+100",
+                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true,
+                gotoCurrent: true,
+                clearBtn: true,
+                showButtonPanel: true,
+                closeText: 'Clear',
+                onClose: function (dateText, inst) {
+                    if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
+                        document.getElementById(this.id).value = '';
+                    }
+                },
+                minDate: new Date(),
+                maxDate: "+1M"
             });
         });
     </script>
