--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/CreateEditEmployee.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/CreateEditEmployee.cshtml
@@ -71,6 +71,7 @@
                                 </div>
                             </div>
                             @Html.Partial("~/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml", Model)
+                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode&SelectedDepartmentId=@Model.SelectedDepartmentId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
