--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -192,7 +192,6 @@
 
 </div>
 <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-<a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
@@ -208,6 +207,7 @@
             var formData = new FormData();
             var fileInput = $('#imageUpload')[0];
             if (fileInput.files.length > 0) {
+                CoditechCommon.ShowLodder();
                 formData.append('files', fileInput.files[0]);
                 $.ajax({
                     url: '/GeneralCommanData/UploadMedia',  // Ensure this matches the route
@@ -218,9 +218,11 @@
                     success: function (response) {
                         $('#imagePreview').attr('src', response.imageUrl).show();
                         $('input[name="PhotoMediaId"]').val(response.photoMediaId);
+                        CoditechCommon.HideLodder();
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
                         console.error('Error uploading file:', textStatus, errorThrown);
+                        CoditechCommon.HideLodder();
                     }
                 });
             }
