--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
@@ -116,9 +116,8 @@
         }
 
         function openDeleteFolderModal(folderId) {
-            if (confirm('Are you sure you want to delete this folder?')) {
-                deleteFolder(folderId);
-            }
+            $('#deleteFolderModal').modal('show');
+            $('#deleteFolderId').val(folderId);
         }
 
         function deleteFolder(folderId) {
@@ -186,5 +185,11 @@
         border-radius: 4px;
         z-index: 1000;
         min-width: 150px;
+    }
+
+    .modal-footer .btn-danger {
+        display: inline-block;
+        visibility: visible;
+        opacity: 1;
     }
 </style>
