--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/CreateEdit.cshtml
@@ -34,56 +34,56 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MaxSizeInMB, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MaxSizeInMB, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.MaxSizeInMB, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "5" })
                                         @Html.ValidationMessageFor(x => x.MaxSizeInMB)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MediaTypeExtensionMasterIds, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MediaTypeExtensionMasterIds, new { @class = "form-control" })
+                                        @Html.ListBoxFor(x => x.MediaTypeExtensionMasterIds, new SelectList(Model.MediaTypeExtensionList, "MediaTypeExtensionMasterId", "ExtensionName"), new { @class = "selectpicker form-control", multiple = "multiple" })
                                         @Html.ValidationMessageFor(x => x.MediaTypeExtensionMasterIds)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LargeImageResize, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.LargeImageResize, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.LargeImageResize, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "5" })
                                         @Html.ValidationMessageFor(x => x.LargeImageResize)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MediumImageResize, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MediumImageResize, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.MediumImageResize, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "5" })
                                         @Html.ValidationMessageFor(x => x.MediumImageResize)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SmallImageResize, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.SmallImageResize, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.SmallImageResize, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "5" })
                                         @Html.ValidationMessageFor(x => x.SmallImageResize)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CrossSellImageResize, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CrossSellImageResize, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.CrossSellImageResize, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "5" })
                                         @Html.ValidationMessageFor(x => x.CrossSellImageResize)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.ThumbnailImageResize, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ThumbnailImageResize, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.ThumbnailImageResize, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "5" })
                                         @Html.ValidationMessageFor(x => x.ThumbnailImageResize)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SmallThumbnailImageResize, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.SmallThumbnailImageResize, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.SmallThumbnailImageResize, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "5" })
                                         @Html.ValidationMessageFor(x => x.SmallThumbnailImageResize)
                                     </div>
                                 </div>
