--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/_List.cshtml
@@ -23,7 +23,7 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                               <td class="text-center">
-                                <a href="../@controllerName/Edit?mediaTypeMasterId=@item.MediaTypeMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Edit?mediaTypeMasterId=@item.MediaTypeMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a> 
                             </td>
                         </tr>
                     }
