--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestGroup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestGroup/CreateEdit.cshtml
@@ -32,23 +32,23 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PathologyTestGroupName, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.PathologyTestGroupName, new { @class = "form-label required"})
                                         @Html.TextBoxFor(x => x.PathologyTestGroupName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PathologyTestGroupName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.HospitalPathologyTestGroupParentId, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.HospitalPathologyTestGroupParentId, new { @class = "form-label"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", pathologyTestGroup)
                                         @Html.ValidationMessageFor(x => x.HospitalPathologyTestGroupParentId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label"})
                                         <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input"})
                                         </div>
                                     </div>
                                 </div>
