--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
@@ -16,6 +16,12 @@
                 <a class="nav-link" href="/adminrolemaster/RoleAllocatedToUserList?adminRoleMasterId=@Model" aria-selected="true">
                     <i class="fas fa-user-tag"></i><h5 class="m-0 ps-2">Role Allocated To User's</h5>
                 </a>
+                <a class="nav-link" href="/adminrolemaster/RoleWiseFolderAction?adminRoleMasterId=@Model" aria-selected="true">
+                    <i class="fas fa-plus"></i><h5 class="m-0 ps-2">Role Wise Folder Action</h5>
+                </a>
+                <a class="nav-link" href="/adminrolemaster/RoleWiseFolderAccess?adminRoleMasterId=@Model" aria-selected="true">
+                    <i class="fas fa-folder"></i><h5 class="m-0 ps-2">Role Wise Folder Access</h5>
+                </a>
             </div>
         </div>
     </div>
