--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDistrictMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDistrictMaster/CreateEdit.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = Model.GeneralDistrictMasterId > 0 ? "Update District" : "Add District";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    
+    DropdownViewModel countryDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Country.ToString(), DropdownName = "GeneralCountryMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralCountryMasterId), ChangeEvent = $"CoditechCommon.GetRegionListByCountryId()" };
+    DropdownViewModel regionDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Region.ToString(), DropdownName = "GeneralRegionMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralRegionMasterId), Parameter = Convert.ToString(Model.GeneralCountryMasterId) };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -13,53 +14,35 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                    <div class="row align-item-center">
-                        <div class="col">
+                        <div class="row align-item-center">
+                            <div class="col">
                                 @if (Model.GeneralDistrictMasterId > 0)
-                            {
+                                {
                                     <h4 class="card-title">Update District</h4>
-                            }
-                            else
-                            {
+                                }
+                                else
+                                {
                                     <h4 class="card-title">Create District</h4>
-                            }
-                        </div><!--end col-->
-                    </div><!--end row-->
-                </div>
+                                }
+                            </div><!--end col-->
+                        </div><!--end row-->
+                    </div>
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GeneralDistrictMasterId)
-                            if (Model.GeneralDistrictMasterId > 0)
-                            {
-                                @Html.HiddenFor(m => m.GeneralCountryMasterId)
-                                @Html.HiddenFor(m => m.GeneralRegionMasterId)
-                            }                          
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GeneralCountryMasterId, new { @class = "form-label required" })
-                                        @*  @Html.TextBoxFor(x => x.CountryId, new { @class = "form-control"}) *@
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownType = DropdownTypeEnum.Country.ToString(),
-                                   DropdownName = "GeneralCountryMasterId",
-                                   DropdownSelectedValue = Model.GeneralCountryMasterId
-                                    .ToString()
-                               })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", countryDropdown)
                                         @Html.ValidationMessageFor(x => x.GeneralCountryMasterId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GeneralRegionMasterId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownType = DropdownTypeEnum.Region.ToString(),
-                                   DropdownName = "GeneralRegionMasterId",
-                                   DropdownSelectedValue = Model.GeneralRegionMasterId
-                                    .ToString()
-                               })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", regionDropdown)
                                         @Html.ValidationMessageFor(x => x.GeneralRegionMasterId)
                                     </div>
                                 </div>
@@ -69,7 +52,7 @@
                                         @Html.TextBoxFor(x => x.DistrictName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.DistrictName)
                                     </div>
-                                </div>                                
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
