--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDistrictMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDistrictMaster/_List.cshtml
@@ -19,8 +19,7 @@
                     {
                         <tr>
                             <td>@item.DistrictName</td>
-                            <td>@item.GeneralRegionMasterId</td>
-                            <td>@item.GeneralCountryMasterId</td>
+                            <td>@item.RegionName</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalDistrictId=@item.GeneralDistrictMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?districtIds=@item.GeneralDistrictMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
